ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: resource-monitoring.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-flask-service
            port:
              number: 5000
